chore: ping command

--- a/src/main/resources/translate/slash_commands_ru_RU.properties
+++ b/src/main/resources/translate/slash_commands_ru_RU.properties
@@ -1,4 +1,8 @@
 ping.description=Посмотреть информацию о сервере.
+ping.cant_retrieve_server="""Убедитесь, что IP / порт корректны. Другие возможные решения проблемы:\n\
+  1. Указана неверная версия\n\
+  2. Сервер офлайн\
+  """
 
 rcon.description=Команды, связанные с RCON.
 rcon.setup.success=RCON был настроен под ваш сервер.
