feat: default scope

--- a/src/main/resources/translate/slash_commands_ru_RU.properties
+++ b/src/main/resources/translate/slash_commands_ru_RU.properties
@@ -14,4 +14,5 @@ rcon.setup.ip.description=Айпи вашего RCON.
 rcon.setup.port.description=Айпи вашего RCON.
 rcon.setup.password.description=Айпи вашего RCON.
 rcon.lookup.description=Посмотреть, какие данные у вашего RCON на данный момент.
+rcon.execute.description=Выполнить команду на RCON'е.
 rcon.execute.server_response="Ответ от сервера: "
