feat: json & colors

--- a/src/main/resources/translate/slash_commands_ru_RU.properties
+++ b/src/main/resources/translate/slash_commands_ru_RU.properties
@@ -1,4 +1,5 @@
 ping.description=Посмотреть информацию о сервере.
+ping.no_description=У сервера отсутствует описание.
 ping.cant_retrieve_server="""Убедитесь, что IP / порт корректны. Другие возможные решения проблемы:\n\
   1. Указана неверная версия\n\
   2. Сервер офлайн\
