fix: ping translations

--- a/src/main/resources/translate/slash_commands_ru_RU.properties
+++ b/src/main/resources/translate/slash_commands_ru_RU.properties
@@ -1,9 +1,15 @@
 ping.description=Посмотреть информацию о сервере.
 ping.no_description=У сервера отсутствует описание.
-ping.cant_retrieve_server="""Убедитесь, что IP / порт корректны. Другие возможные решения проблемы:\n\
+ping.cant_retrieve_server=Убедитесь, что IP / порт корректны. Другие возможные решения проблемы:\n\
   1. Указана неверная версия\n\
-  2. Сервер офлайн\
-  """
+  2. Сервер офлайн
+ping.version_not_found=Версия не найдена, пожалуйста, попробуйте указать другую.
+ping.server_info.title=Информация о сервере.
+ping.server_info.version=Информация о версии.
+ping.server_info.version.unknown=Неизвестный протокол
+ping.server_info.players=Информация об игроках.
+ping.server_info.players.max=Максимум игроков
+ping.server_info.players.online=Онлайн
 
 rcon.description=Команды, связанные с RCON.
 rcon.setup.success=RCON был настроен под ваш сервер.
