feat: add bridge command & lil fixes & add autocomplete for rcon execute

--- a/src/main/resources/translate/slash_commands_ru_RU.properties
+++ b/src/main/resources/translate/slash_commands_ru_RU.properties
@@ -23,3 +23,15 @@ rcon.setup.password.description=Айпи вашего RCON.
 rcon.lookup.description=Посмотреть, какие данные у вашего RCON на данный момент.
 rcon.execute.description=Выполнить команду на RCON'е.
 rcon.execute.server_response="Ответ от сервера: "
+rcon.execute.cant_connect=Извините, но у меня не получается подключиться к серверу.
+rcon.execute.missing_permissions=Извините, но у вас нет прав на исполнение RCON команд.
+rcon.restrict.description=Указать пользователя, который сможет позже исполнять RCON команды.
+rcon.restrict.user.description=Пользователь, который далее будет иметь права на RCON.
+rcon.restrict.user_deleted=Пользователь был удален и более не сможет использовать RCON.
+
+bridge.toggle.value.enabled=включен
+bridge.toggle.value.disabled=выключен
+bridge.toggled=Мост был %s
+bridge.description=Создаёт мост между майнкрафт и дискорд сервером.
+bridge.enable.description=Включить или выключить мост между серверами.
+bridge.rcon_not_enabled=Извините, но без RCON мост работать не может. Включите RCON и попробуйте снова.
