--- a/src/main/resources/translate/slash_commands_ru_RU.properties
+++ b/src/main/resources/translate/slash_commands_ru_RU.properties
@@ -25,6 +25,8 @@ rcon.execute.description=Выполнить команду на RCON'е.
 rcon.execute.server_response="Ответ от сервера: "
 rcon.execute.cant_connect=Извините, но у меня не получается подключиться к серверу.
 rcon.execute.missing_permissions=Извините, но у вас нет прав на исполнение RCON команд.
+rcon.execute.null_data=Извините, но, кажется, вы забыли настроить RCON.
+rcon.execute.command_issued=Команды была выполнена без ответа.
 rcon.restrict.description=Указать пользователя, который сможет позже исполнять RCON команды.
 rcon.restrict.user.description=Пользователь, который далее будет иметь права на RCON.
 rcon.restrict.user_deleted=Пользователь был удален и более не сможет использовать RCON.
