fix(localizations): ru locale works properly

--- a/src/main/resources/translate/slash_commands_ru.properties
+++ b/src/main/resources/translate/slash_commands_ru.properties
@@ -36,4 +36,5 @@ bridge.toggle.value.disabled=выключен
 bridge.toggled=Мост был %s
 bridge.description=Создаёт мост между майнкрафт и дискорд сервером.
 bridge.enable.description=Включить или выключить мост между серверами.
+bridge.channel.description=Указать канал связывания.
 bridge.rcon_not_enabled=Извините, но без RCON мост работать не может. Включите RCON и попробуйте снова.
