fix: locales (probably. I don't know why arguments doesn't translating)

--- a/src/main/resources/translate/slash_commands_ru_RU.properties
+++ b/src/main/resources/translate/slash_commands_ru_RU.properties
@@ -10,6 +10,9 @@ ping.server_info.version.unknown=Неизвестный протокол
 ping.server_info.players=Информация об игроках.
 ping.server_info.players.max=Максимум игроков
 ping.server_info.players.online=Онлайн
+ping.server.description=Сервер, который хотите пингануть.
+ping.port.description=Порт севера.
+ping.version.description=Версия сервера.
 
 rcon.description=Команды, связанные с RCON.
 rcon.setup.success=RCON был настроен под ваш сервер.
@@ -27,6 +30,7 @@ rcon.execute.cant_connect=Извините, но у меня не получае
 rcon.execute.missing_permissions=Извините, но у вас нет прав на исполнение RCON команд.
 rcon.execute.null_data=Извините, но, кажется, вы забыли настроить RCON.
 rcon.execute.command_issued=Команды была выполнена без ответа.
+rcon.execute.command.description=Команда, которую хотите выполнить.
 rcon.restrict.description=Указать пользователя, который сможет позже исполнять RCON команды.
 rcon.restrict.user.description=Пользователь, который далее будет иметь права на RCON.
 rcon.restrict.user_deleted=Пользователь был удален и более не сможет использовать RCON.
